--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -14,6 +14,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin-top: calc(0px - 1.5rem - 6px);
+}
+
+.avatar {
+    width: calc(3rem + 12px);
+    height: calc(3rem + 12px);
+    border-radius: 8px;
+    border: 4px solid var(--gray-800);
+    outline: 2px solid var(--green-500);
+}
+
+.profile strong {
+    margin-top: 1rem;
+    color: var(--gray-100);
+    line-height: 1.6;
+}
+
+.profile span {
+    font-size: 0.875rem;
+    color: var(--gray-400);
+    line-height: 1.6;
 }
 
 .sidebar footer {
@@ -28,11 +50,19 @@
     align-items: center;
     justify-content: center;
     padding: 0 1.5rem;
+    gap: 0.5rem;
 
     background: transparent;
     color: var(--green-500);
     border: 1px solid var(--green-500);
     border-radius: 8px;
-    font-weight: bold;
+    font-weight: 600;
     text-decoration: none;
+
+    transition: color 0.2s, background-color 0.1s;
+}
+
+.sidebar footer a:hover {
+    background: var(--green-500);
+    color: var(--white);    
 }
