--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,5 +7,14 @@
     align-items: flex-start;
     grid-template-columns: 256px 1fr;
     gap: 2rem;
-    
+}
+
+@media (max-width: 768px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    .wrapper {
+        grid-template-columns: 1fr;
+    }
 }
