--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     justify-content: center;
+    align-items: center;
     background: var(--gray-800);
     height: 80px;
     padding: 1.25rem 0;
